--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.5.3
 cachetools==1.1.6
 chardet==2.3.0
 lxml==3.7.3
+Markdown==2.6.8
 multidict==2.1.4
 pycosat==0.6.1
 requests==2.13.0
