--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 aiohttp==2.0.6
+aioredis==0.3.0
 async-timeout==1.2.0
 beautifulsoup4==4.5.3
 cachetools==1.1.6
 chardet==2.3.0
+hiredis==0.2.0
+Jinja2==2.9.6
 lxml==3.7.3
 Markdown==2.6.8
+MarkupSafe==1.0
 multidict==2.1.4
 pycosat==0.6.1
+pytz==2017.2
 requests==2.13.0
 ruamel.yaml==0.14.5
 yapf==0.16.1
